@@ -526,3 +526,6 @@ Changes only in Hortonworks github and not in hadoop-2.7.1 and hence not covered
     BUG-45953/HADOOP-12463. Fix TestShell.testGetSignalKillCommand failure on windows.
     (Steve Loughran/Wangda Tan)
 
+    BUG-46171. HDFS-9178. Slow datanode I/O can cause a wrong node to
+    be marked bad. (Kihwal Lee)
+
